# django-azure-auth

./: .flake8  .gitignore  .pre-commit-config.yaml  .releaserc.prerelease.yaml  .releaserc.yaml  AGENTS.md  CHANGELOG.md  LICENSE  README.md  install_poetry.sh  pyproject.toml
.github/: dependabot.yml
.github/workflows/: ci.yml  push-actions.yml  release.yml  test.yaml
azure_auth/: apps.py  backends.py  decorators.py  exceptions.py  handlers.py  middleware.py  urls.py  utils.py  views.py
azure_auth/client/: __init__.py  msal_client.py
azure_auth/tests/: conftest.py  misc.py  settings.py  test_decorators.py  test_handler.py  test_middleware.py  test_views.py  urls.py
reports/coverage/: coverage.xml
tests/: test_healthcheck.py
