[tool.poetry]
name = "django-azure-auth"
version = "1.0.3"
description = "A simple Django app for user authentication with Azure Active Directory."
authors = ["AgileTek Engineering <london@agiletek.co.uk>"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/AgileTek/django-azure-auth"
keywords = ['django', 'azure', 'authentication', 'microsoft']
classifiers = [
    "Framework :: Django",
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Information Technology",
]
packages = [
    { include = "azure_auth"},
]

[tool.poetry.dependencies]
python = "^3.8"
msal = "^1.18.0"
Django = ">=3.2"

[tool.poetry.dev-dependencies]
pytest = "^7.1.2"
pre-commit = "^2.19.0"
pytest-cov = "^3.0.0"
coverage = {extras = ["toml"], version = "^6.4.1"}
pytest-django = "^4.5.2"
mixer = "^7.2.2"

[tool.pytest.ini_options]
addopts = "--cov . -v --cov-report=html"
DJANGO_SETTINGS_MODULE = "azure_auth.tests.settings"
python_files = ["tests.py", "test_*.py",  "*_tests.py"]

[tool.coverage.run]
include = ["azure_auth/*"]
omit = [
    "*/tests/*",
    "*/tests*",
    "*/migrations/*",
    "*__init__*",
    ]
branch = true

[tool.coverage.report]
exclude_lines = ["pragma: no cover"]
show_missing = true
include = ["azure_auth/*"]
omit = [
    "*/tests/*",
    "*/tests*",
    "*/migrations/*",
    "*__init__*",
    ]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
